# RPOD-Software

./: .gitignore  CMakeLists.txt  README.md
cmake/: linux-platform.cmake  stm32-platform.cmake  stm32-toolchain.cmake
docs/: README.md  VBN_FuncitonalArchitecture.drawio
include/: types.hpp
include/apps/: queues.hpp
include/apps/control/: CaptureController.hpp
include/apps/core/: CommandDataHandler.hpp  StateMachine.hpp
include/apps/vbn/: DynamicPoseEstimator.hpp  FeatureDetector.hpp  ImageCapture.hpp  RNAVFilter.hpp  StaticPoseEstimator.hpp  VBNTask.hpp
include/core/: StateMachine.hpp
include/msg/: FeatureFrame.hpp  ImageFrame.hpp  PoseEstimate.hpp  RNAVState.hpp  RPODHealth.hpp  RangeObs.hpp  RelNavState.hpp
include/os/: rtos.hpp
include/platform/: IFeatureExtractor.hpp
include/platform/linux/: CameraInterface.hpp  FeatureExtractor.hpp
include/platform/stm32/: CameraInterface.hpp  FeatureExtractor.hpp  entry.h
include/system/: ncp_ids.hpp  rcu.hpp  rsom.hpp
include/types/: FeatureFrame.hpp  ImageFrame.hpp  PoseEstimate.hpp
include/vbn/: FeatureDetector.hpp  StaticPoseEstimator.hpp
include/wire/: codec.hpp  ncp_ports.hpp  pose_estimate.hpp
platform/stm32/: README.md
platform/stm32/nucleo_h7a3ziq/: board.cmake
platform/stm32/nucleo_h7a3ziq/Core/Src/: main.c
src/: main.cpp  som_main.cpp
src/apps/: queues.cpp
src/apps/core/: CommandDataHandler.cpp  StateMachine.cpp
src/apps/vbn/: DynamicPoseEstimator.cpp  FeatureDetector.cpp  ImageCapture.cpp  RNAVFilter.cpp  StaticPoseEstimator.cpp  VBNTask.cpp
src/core/: StateMachine.cpp
src/idl/: README.md  pose_estimate.cpp
src/os/baremetal/: rtos.cpp
src/os/freertos/: rtos.cpp
src/os/posix/: rtos.cpp
src/platform/linux/: CameraInterface.cpp  FeatureExtractor.cpp  [DEP]FeatureExtractor.cpp
src/platform/stm32/: CameraInterface.cpp  entry.cpp
src/system/: rcu_main.cpp  rsom_main.cpp
src/system/rcu/: rcu_main.cpp
src/system/rsom/: rsom_main.cpp
src/vbn/: FeatureDetector.cpp
test/: README.md  rnav_pipeline_test.cpp  rnav_rnavfilter_test.cpp  rtos_queue_test.cpp  rtos_semaphore_test.cpp  vbn_batch_runner.cpp  vbn_featuredetection_test.cpp  vbn_imagecapture_test.cpp  vbn_imagecapturebuild_test.cpp  vbn_ledcharacterisation_test.cpp  vbn_pipeline_test.cpp  vbn_staticposeestimation_test.cpp
tools/: README.md  image_simulator.py  image_simulator_new.py  test_sweep.py  v4l2_media_setup.sh
tools/data/: README.md
tools/data/cases/hw/: README.md
tools/data/cases/hw/CASE_251230_Unknown/: info.txt  results.txt
tools/data/cases/hw/CASE_260101_Unknown/: info.txt  results.txt
tools/data/cases/sim/: README.md
tools/data/cases/sim/tmp_case/: truth.txt
tools/eval/: README.md  estimator_evaluator.py  vbn_evaluator.py  vbn_pose_eval.py
tools/groundmonitor/: GroundMonitor.cpp  GroundMonitor.hpp  README.md
tools/sim/: README.md  vbn_pose_sweep.py  vbn_range_sweep.py  vbn_simulator.py
